Day12 CLI